--- a/deepface_ui_react/package.json
+++ b/deepface_ui_react/package.json
@@ -3,14 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.26.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "^3.0.1",
-    "web-vitals": "^2.1.4"
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/styles": "^4.11.5",
+    "@mui/icons-material": "^5.10.3",
+    "@mui/material": "^5.10.4",
+    "aos": "^2.3.4",
+    "axios": "^0.27.2",
+    "cors": "^2.8.5",
+    "crypto-browserify": "^3.12.0",
+    "express": "^4.18.1",
+    "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
+    "mongodb": "^4.9.1",
+    "mongoose": "^6.5.4",
+    "multer": "^1.4.5-lts.1",
+    "node-polyfill-webpack-plugin": "^2.0.1",
+    "os-browserify": "^0.3.0",
+    "react": "^18.2.0",
+    "react-countup": "^6.3.1",
+    "react-dom": "^18.2.0",
+    "react-scripts": "4.0.3",
+    "three": "^0.144.0",
+    "timers-browserify": "^2.0.12",
+    "webpack": "4.44.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,5 +52,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "sass": "^1.54.4"
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
